<resources>
    <string name="title_activity_lesson">Lesson</string>
    <string name="app_name">Teacher\'s assistant</string>
    <string name="button_save">Save</string>
    <string name="start_screen_activity_menu_text_help">hint</string>
    <string name="start_screen_activity_title_my_learners">Students</string>
    <string name="start_screen_activity_title_my_cabinets">Cabinets</string>
    <string name="start_screen_activity_title_my_schedule">Schedule</string>
    <string name="start_screen_activity_title_settings">Settings</string>
    <string name="start_screen_activity_title_now">Now:</string>
    <string name="start_screen_activity_title_current_no_lesson">Now there is no lesson.</string>
    <string name="start_screen_activity_title_current_start_lesson">Start the lesson?</string>
    <string name="start_screen_activity_dialog_title_rate">Please rate our app)</string>
    <string name="start_screen_activity_dialog_button_rate_now">rate!</string>
    <string name="start_screen_activity_dialog_button_later">later</string>
    <string name="start_screen_activity_dialog_whats_new_title">What\'s new:</string>
    <string name="start_screen_activity_dialog_whats_new_text">Congratulations on the start of the school year, dear users!\n\n
We present the promised global update: now everything is much more convenient and beautiful. With the new design, new features also came (for example, types of ratings: test, control, quarterly). Do not forget to get into Settings - they allow you to make the application 100% suitable for you.
Thank you for your feedback - it was they who helped us make the application better! If you have any suggestions - write, we have ambitious plans to further improve the Teacher Assistant!
    </string>
    <string name="start_screen_activity_dialog_whats_new_button_ok">Ok</string>
    <string name="start_screen_activity_toast_no_lessons">At the moment there are no lessons planned</string>
    <string name="start_screen_activity_help_text_1">Hello!</string>
    <string name="start_screen_activity_help_text_2">Our «Teacher Assistant» application is a substitute for a paper \«teacher\'s diary», only its possibilities are much wider. Let\'s take a brief look at it. </string>
    <string name="start_screen_activity_help_text_3">(In the future, this screen can be accessed through the help button in the main menu)</string>
    <string name="start_screen_activity_help_text_4">If there was a problem, write:</string>
    <string name="start_screen_activity_help_text_5">ivanmarch@gmail.com</string>
    <string name="start_screen_activity_help_text_6">«My students»</string>
    <string name="start_screen_activity_help_text_7">In the «My students» section, you can add and edit classes with your students, and you can also watch the answers you gave them for the lesson.</string>
    <string name="start_screen_activity_help_text_8"> «My cabinets» </string>
    <string name="start_screen_activity_help_text_9">In this section, you can work with the «virtual classes» function. You can create cabinets and put the desks in them. </string>
    <string name="start_screen_activity_help_text_10">«My schedule»</string>
    <string name="start_screen_activity_help_text_11">In the «My Schedule» section, you can compose your own electronic timetable, which is always at hand.</string>
    <string name="start_screen_activity_help_text_12">! Before adding a lesson, you need to add a class with students in the section «My students» and add your classrooms in the section «My offices» !</string>
    <string name="start_screen_activity_help_text_13">How do I use this section?</string>
    <string name="start_screen_activity_help_text_14">In this semester you have on Mondays a 3rd mathematics lesson in 7 «B» class in 45 rooms</string>
    <string name="start_screen_activity_help_text_15">What should be done:</string>
    <string name="start_screen_activity_help_text_16">1. Click on the nearest Monday (we have it on January 5)</string>
    <string name="start_screen_activity_help_text_17">Before you will be a schedule of lessons for the day</string>
    <string name="start_screen_activity_help_text_18">2. Click on the corresponding lesson - the third</string>
    <string name="start_screen_activity_help_text_19">Before you will appear the menu» creating a lesson»</string>
    <string name="start_screen_activity_help_text_20">3. Select the already created class - 7 «b» and cabinet 45. And create for this class a subject of mathematics.</string>
    <string name="start_screen_activity_help_text_21">If you have not yet created a list of students and classrooms, you can do this in the sections «My students» and «My classrooms»</string>
    <string name="start_screen_activity_help_text_22">4. Ask if this lesson will repeat: \n
        For example, if the lesson is held every week, select» Repeat lesson»: weekly. </string>
    <string name="start_screen_activity_help_text_23">If the lesson is repeated several times a week, then it is enough to create the same one on the next day of the week.</string>
    <string name="start_screen_activity_help_text_24">5. After that, clicking on the lesson in the timetable you can start it</string>
    <string name="start_screen_activity_help_text_25">P.S. If you need to edit an existing lesson, click on it and hold it.</string>
    <string name="start_screen_activity_help_text_26">How can we seat the students?</string>
    <string name="start_screen_activity_help_text_27">In the «My Schedule» section of the «Create a lesson» menu, you can edit the students\' seating at the desks (the button is to seat the students).</string>
    <string name="start_screen_activity_help_text_28">That is, you can put the children on the desks in the way they sit in reality and then put the answers or points will be easy - you do not have to look for anyone in the list, you just need to poke a finger at Vasya Ivanov sitting at the second desk.</string>
    <string name="start_screen_activity_help_text_29">Also, it can be done in the lesson by selecting from the top in the menu the item to seat the students</string>
    <string name="start_screen_activity_help_text_30">How to set up desks?</string>
    <string name="start_screen_activity_help_text_31">«Current lesson»</string>
    <string name="start_screen_activity_help_text_32">If you just started using the application, you\'ll notice that when you click on the «Current lesson» section, nothing happens, it\'s very simple, this section is directly related to your schedule .If you have a scheduled lesson scheduled for the current time, Clicking on this button, the Teacher\'s Assistant will find it. </string>
    <string name="start_screen_activity_help_text_33">In the lesson you can put the answers (which you can see later in the section «My students» ), you can simply record how many times and what student answered.You will not need to remember anything, you will not need a pen or paper. </string>
    <string name="start_screen_activity_help_text_34">«Settings»</string>
    <string name="start_screen_activity_help_text_35">In the «Settings» section you can adjust the value of the desks depending on the size of the screen of your device. In the same place, you can delete all the data you added to the application (we have protection against accidental deletion, so do not worry). </string>
    <string name="title_activity_learners_classes_out">My classes</string>
    <string name="learners_classes_out_activity_dialog_title_create_class">Adding a class</string>
    <string name="learners_classes_out_activity_dialog_title_edit_class">Class editing</string>
    <string name="learners_classes_out_activity_dialog_hint_class_name">Class name</string>
    <string name="learners_classes_out_activity_dialog_button_add">add</string>
    <string name="learners_classes_out_activity_dialog_button_save">save</string>
    <string name="learners_classes_out_activity_dialog_button_delete">remove</string>
    <string name="learners_classes_out_activity_dialog_button_cancel">cancel</string>
    <string name="learners_classes_out_activity_text_help">To create a class, press + and enter its name. \nTo see the list of students and their grades, click on the class you need. \nTo rename or delete a class with students, click on it and hold it. </string>
    <string name="title_activity_learners_and_grades">students in the </string>
    <string name="learners_and_grades_out_activity_title_subject">Subject</string>
    <string name="learners_and_grades_out_activity_title_table_names">Name</string>
    <string name="learners_and_grades_out_activity_title_grade_n">abs</string>
    <string name="learners_and_grades_out_activity_title_grade_no_answers">no answers</string>
    <string name="learners_and_grades_out_activity_text_create_subject">Create new?</string>
    <string name="learners_and_grades_out_activity_text_add_learner">+ Add learner</string>
    <string name="learners_and_grades_out_activity_menu_title_statistics">statistics</string>
    <string name="learners_and_grades_out_activity_dialog_title_create_learner">Adding a student</string>
    <string name="learners_and_grades_out_activity_dialog_title_edit_learner">Student editing</string>
    <string name="learners_and_grades_out_activity_dialog_title_edit_grade">Editing an answers</string>
    <string name="learners_and_grades_out_activity_dialog_hint_learner_name">Name</string>
    <string name="learners_and_grades_out_activity_dialog_hint_learner_second_name">Surname</string>
    <string name="learners_and_grades_out_activity_dialog_button_add">+ Add</string>
    <string name="learners_and_grades_out_activity_dialog_button_save">Save</string>
    <string name="learners_and_grades_out_activity_dialog_button_create">Create</string>
    <string name="learners_and_grades_out_activity_dialog_button_change">Change</string>
    <string name="learners_and_grades_out_activity_dialog_button_delete">Remove</string>
    <string name="learners_and_grades_out_activity_dialog_button_cancel">cancel</string>
    <string name="learners_and_grades_out_activity_dialog_title_choose_subject">Choose subject:</string>
    <string name="learners_and_grades_out_activity_dialog_title_enter_subject_name">Enter subject name:</string>
    <string name="learners_and_grades_out_activity_dialog_hint_subject_name">Subject name</string>
    <string name="learners_and_grades_out_activity_dialog_title_lesson">lesson</string>
    <string name="learners_and_grades_statistics_activity_dialog_title_add_statistic">Add time period</string>
    <string name="learners_and_grades_statistics_activity_dialog_title_remove_statistic">Delete time period</string>
    <string name="learners_and_grades_statistics_activity_dialog_text_time_before">From:</string>
    <string name="learners_and_grades_statistics_activity_dialog_text_time_after">To:</string>
    <string name="learners_and_grades_statistics_activity_dialog_hint_profile_name">Period name</string>
    <string name="learners_and_grades_statistics_activity_dialog_hint_profile_date_year">YEAR</string>
    <string name="learners_and_grades_statistics_activity_dialog_hint_profile_date_month">MONTH</string>
    <string name="learners_and_grades_statistics_activity_dialog_hint_profile_date_day">DAY</string>
    <string name="learners_and_grades_statistics_activity_dialog_button_cancel">Cancel</string>
    <string name="learners_and_grades_statistics_activity_dialog_button_save">Save</string>
    <string name="learners_and_grades_statistics_activity_dialog_button_delete">Delete</string>
    <string name="cabinets_out_activity_dialog_hint_cabinet_name">Name/cabinet</string>
    <string name="settings_activity_hint_max_answer">MAX ANSWER</string>
    <string name="settings_activity_title_max_answer">Max answers count</string>
    <string name="settings_activity_dialog_button_cancel">Cancel</string>
    <string name="settings_activity_dialog_button_save">Save</string>
</resources>