<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/settings_activity_title_max_answer"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="@dimen/text_subtitle_size" />

    <EditText
        android:id="@+id/dialog_fragment_layout_settings_edit_maximum_grade_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:gravity="center"
        android:hint="@string/settings_activity_hint_max_answer"
        android:inputType="number"
        android:textSize="@dimen/text_simple_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_fragment_layout_settings_edit_maximum_grade_button_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/my_buttons_height_size"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/start_screen_3_1_blue_spot"
            android:text="@string/settings_activity_dialog_button_cancel"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_simple_size" />

        <Button
            android:id="@+id/dialog_fragment_layout_settings_edit_maximum_grade_button_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/my_buttons_height_size"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/start_screen_3_1_blue_spot"
            android:text="@string/settings_activity_dialog_button_save"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_simple_size" />
    </LinearLayout>

</LinearLayout>