<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:background="@drawable/base_background_dialog_full_round_white"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/simple_buttons_height"
    android:background="@drawable/base_background_dialog_head_round_white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:id="@+id/learners_classes_out_dialog_create_class_button_cancel"
        android:layout_width="@dimen/simple_buttons_height"
        android:layout_height="@dimen/simple_buttons_height">

        <ImageView
            android:layout_width="@dimen/base_classic_arrow_immutable_size"
            android:layout_height="@dimen/base_classic_arrow_immutable_size"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/base_button_close" />

    </RelativeLayout>

    <TextView
        style="@style/ButtonSimpleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/learners_classes_out_activity_dialog_title_create_class" />
</LinearLayout>

<EditText
    android:id="@+id/learners_classes_out_dialog_create_class_name_input"
    android:layout_width="match_parent"
    android:layout_height="@dimen/simple_buttons_height"
    android:hint="@string/cabinets_out_activity_dialog_hint_cabinet_name"
    android:inputType="textCapWords"
    style="@style/ButtonSimpleStyle"
    android:layout_marginBottom="@dimen/simple_margin"
    android:padding="0dp"
    android:layout_marginStart="@dimen/double_margin"
    android:layout_marginEnd="@dimen/double_margin"
    android:background="@color/transparent"
    android:textColor="@color/text_color_simple" />

<TextView
    android:id="@+id/learners_classes_out_dialog_create_class_button_save"
    style="@style/ButtonSimpleStyle"
    android:layout_width="match_parent"
    android:layout_height="@dimen/simple_buttons_height"
    android:background="@drawable/base_background_dialog_bottom_round_blue"
    android:gravity="center"
    android:text="@string/button_save"
    android:textColor="@color/text_color_inverse" />
</LinearLayout>

