<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_period_dialog_fragment_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/learners_and_grades_statistics_activity_dialog_title_remove_statistic"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="@dimen/text_subtitle_size" />

        <LinearLayout
            android:id="@+id/delete_period_dialog_fragment_periods_out_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/delete_period_dialog_fragment_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_buttons_height_size"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/start_screen_3_1_blue_spot"
                android:text="@string/learners_and_grades_statistics_activity_dialog_button_cancel"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_simple_size" />

            <Button
                android:id="@+id/delete_period_dialog_fragment_button_remove"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_buttons_height_size"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/start_screen_3_1_blue_spot"
                android:text="@string/learners_and_grades_statistics_activity_dialog_button_delete"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_simple_size" />

        </LinearLayout>
</LinearLayout>
